Schermpjes eindelijk "werkend" gerkegen

--- a/www/bekeken_films.html
+++ b/www/bekeken_films.html
@@ -16,6 +16,7 @@
     <body>
 	
 		<div data-role="page">
+			
 			<div data-role="header">
 				<h1>Nacho time!</h1>
 				<div data-role="navbar">
@@ -27,11 +28,17 @@
 					</ul>
 				</div>
 			</div>
+			
 			<div data-role="main" class="ui-content">
 			
 				<p>Bekeken films</p>
 			
 			</div>
+			
+			<div data-role="footer">
+				<span>Footer</span>
+			</div>
+			
 		</div>
 		
     </body>
