Paar verandering in display, debug nodig (kan niet via de developer app :|)

--- a/www/series.html
+++ b/www/series.html
@@ -21,10 +21,10 @@
 				<h1>Nacho time!</h1>
 				<div data-role="navbar">
 					<ul>
-						<li><a href="#films.html">Films</a></li>
+						<li><a href="films.html">Films</a></li>
 						<li><a href="#">Series</a></li>
-						<li><a href="#tekenfilms.html">Tekenfilms</a></li>
-						<li><a href="#bekeken_films.html">Bekeken films</a></li>
+						<li><a href="tekenfilms.html">Tekenfilms</a></li>
+						<li><a href="bekeken_films.html">Bekeken films</a></li>
 					</ul>
 				</div>
 			</div>
