--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,7 @@
 		<script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
 		<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
         <script src="js/index.js"></script>
+        <script src="js/global.js"></script>
 		
         <title>Nacho time!</title>
     </head>
@@ -43,7 +44,7 @@
             
 			<div data-role="main" class="ui-content">
 				<a href="settings.html" data-transition="slide">Settings</a>
-                <a href="new.html">New Todo</a>
+                <a href="new.html" data-transition="slide">New Todo</a>
 			</div>
 		</div>
         
