--- a/www/new.html
+++ b/www/new.html
@@ -31,7 +31,8 @@
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
 		<script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
 		<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-        <script src="js/index.js"></script>
+        <script src="js/new.js"></script>
+        <script src="js/global.js"></script>
 		
         <title>Nacho time!</title>
     </head>
