--- a/www/settings.html
+++ b/www/settings.html
@@ -32,6 +32,7 @@
 		<script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
 		<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
         <script src="js/settings.js"></script>
+        <script src="js/global.js"></script>
 		
         <title>To Do List</title>
     </head>
