ToDos opslaan werkt

--- a/www/new.html
+++ b/www/new.html
@@ -44,7 +44,9 @@
             </div>
             
 			<div data-role="main" class="ui-content">
-				
+				<input type="text" name="gebruiker" placeholder="Gebruiker" id="gebruiker" value="" />
+                <textarea name="beschrijving" placeholder="Beschrijving" id="beschrijving"></textarea>
+                <input type="submit" value="Toevoegen" id="toevoegen" />
 			</div>
 		</div>
     </body>
