Titels en redirect na toevoegen note

--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,7 @@
         <script src="js/index.js"></script>
         <script src="js/global.js"></script>
 		
-        <title>Nacho time!</title>
+        <title>To Do List</title>
     </head>
     <body>
 		<div data-role="page" id="todos">
