--- a/www/new.html
+++ b/www/new.html
@@ -39,8 +39,8 @@
     <body>
         <div data-role="page" id="new">
             <div data-role="header" data-id="header" data-position="fixed" >
-                <a href="#" data-role="button" data-mini="true" data-rel="back">Back</a>
-                <h1>New Todo</h1>
+                <a href="#" data-role="button" data-mini="true" data-rel="back">Terug</a>
+                <h1>Nieuwe Todo</h1>
             </div>
             
 			<div data-role="main" class="ui-content">
