Setting werken eindelijk (denk ik)

--- a/www/test.html
+++ b/www/test.html
@@ -31,8 +31,8 @@
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
 		<script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
 		<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+        <script src="js/settings.js"></script>
         <script src="js/global.js"></script>
-		<script src="js/settings.js"></script>
 		
         <title>To Do List</title>
     </head>
@@ -48,16 +48,16 @@
 			<div data-role="main" class="ui-content">
 				<label for="toon_gebruiker">Toon gebruiker bij todo:</label>
 				<select name="toon_gebruiker" id="toon_gebruiker" data-role="slider">
-					<option value="Uit">Uit</option>
-					<option value="Aan">Aan</option>
+					<option value="false">Uit</option>
+					<option value="true">Aan</option>
 				</select> 
 			</div>
 			
 			<div data-role="main" class="ui-content">
 				<label for="toon_tijd">Toon tijd bij todo:</label>
 				<select name="toon_tijd" id="toon_tijd" data-role="slider">
-					<option value="Uit">Uit</option>
-					<option value="Aan">Aan</option>
+					<option value="false">Uit</option>
+					<option value="true">Aan</option>
 				</select> 
 			</div>
 			
